--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
 <body class="page__body">
   <div class="site-container">
     @include('partials/header.html')
+    <main class="main">
+    @include('partials/hero.html')
+    </main>
     @include('partials/footer.html')
-    <!-- @include('html/h1.html') пример include -->
   </div>
 </body>
 
