--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       @include('partials/hero.html')
       @include('partials/products.html')
       @include('partials/story.html')
+      @include('partials/ticker-bottom.html')
     </main>
     @include('partials/footer.html')
   </div>
