--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       @include('partials/products.html')
       @include('partials/story.html')
       @include('partials/ticker-bottom.html')
+      @include('partials/banner.html')
     </main>
     @include('partials/footer.html')
   </div>
